# YukkiMusic

./: .codacy.yml  .dockerignore  .gitignore  .imgbotconfig  .isort.cfg  .pre-commit-config.yaml  .pylintrc  Aptfile  CHANGELOG.md  CHANGELOGS.md  Dockerfile  LICENSE  PRIVACY.md  Procfile  README.md  TODO.md  Umm.md  app.json  app.py  docker-compose.yml  format.sh  genstring.py  go.mod  go.sum  heroku.yml  install.sh  main.go  pylint_warnings.json  pylint_warnings_sorted.json  pyproject.toml  readme.md  requirements.txt  run cmd.txt  sample.env  setup  setup.cfg  setup.sh  setup_ntgcalls.sh  todo.md
.github/: README.md  dependabot.yml  sort_pylint_warnings.py  t.py
.github/ISSUE_TEMPLATE/: feature-request.yml
.github/docs/: requirements.txt
.github/workflows/: Pylint.yml  black.yml  codecov.yml  docs.yml  format.yml  pylint.yaml  pylint.yml  replace.yml  spell.yml  sphnix.yml  test-install.yml  typos.yml  update-deps.yml  uv.yml
.github/worlflows/: replace.yml
.jules/: bolt.md
YukkiMusic/: __init__.py  __main__.py  logging.py  misc.py
YukkiMusic/Userbot/: __init__.py
YukkiMusic/core/: FastTelethon.py  __init__.py  bot.py  call.py  cookies.py  dir.py  enum.py  filters.py  gcall.py  git.py  h  h.py  help.py  logger.py  modules.py  mongo.py  request.py  telethon.py  track.py  userbot.py  youtube.py
YukkiMusic/cplugin/: a.py  active.py  auth.py  callback.py  channelplay.py  controls.py  help.py  joke.py  live.py  logger.py  loop.py  pause.py  ping.py  play.py  playmode.py  queue.py  resume.py  seek.py  setting.py  shuffle.py  skip.py  speed.py  start.py  stop.py  telegraph.py  vcmute.py  watcher.py
YukkiMusic/plugins/: __init__.py
YukkiMusic/utils/: __init__.py  admin_check.py  ar.yml  assistant.py  channelplay.py  chatstatus.py  cleanmode.py  downloaders py  error.py  events.py  exceptions.py  externalplugins.py  fallback.py  filter.py  font_string.py  formatters.py  functions.py  image.py  inline.py  inlinefunction.py  inlinequery.py  keyboard.py  logger.py  misc.py  note_funcs.py  pastebin.py  permissions.py  sections.py  sys.py  testing.py  theme.py  thumbnails.py
assets/: README.md
cmd/app/: check_ffmpeg.go  glibc_compatibility.h  main.go
config/: README.md  __init__.py  config.go  config.py  load_env.go
config/cookies/: cookies.txt
cookies/: cookie_manager.py  cookies.txt
docs/: conf.py  index.md  requirements.txt
docs/_static/: custom.css
docs/_templates/: 404.html  copyright.html
docs/html_extra/: 404.html
docs/source/: CHANGELOG.rst  LICENSE.rst  conf.py  deployment.rst  index.md  index.rst  overview.md  setup.rst
internal/config/: README.md  config.go
internal/cookies/: README.md  cookies.go  example.txt
internal/core/: README.md  assistant.go  assistant_manager.go  buttons.go  chat_state.go  clients.go  file.go  get_video_dimension.go  helpers.go  logger.go  ntg_player.go  room.go  room_advanced.go  room_control.go  room_file.go  room_playback.go  room_queue.go  room_state.go  rtmp_player.go  speed_source.go  timers.go  voice_call.go
internal/database/: README.md  admin_mode.go  assistant.go  auth_users.go  autoleave.go  blacklist.go  bot_state.go  channel_play.go  chat_settings.go  clean_mode.go  command_delete.go  cplay.go  database.go  helpers.go  language.go  logger.go  maintenance.go  migrate_data.go  no_thumb.go  play_mode.go  rtmp_cfg.go  served.go  served_stats.go  sudo_users.go  thumbnail.go
internal/locales/: README.md  ar.yml  en.yml  hi.yml  loader.go  tr.yml
internal/modules/: README.md  actions.go  active.go  auth.go  autoleave.go  autoplay.go  blacklist.go  broadcast.go  bug.go  call.go  callback.go  cb.go  cleanmode.go  comm.go  cplay.go  dev.go  eval.go  filters.go  flag_help.go  handlers.go  help.go  helpers.go  language.go  leave.go  logger.go  logs.go  loop.go  maint.go  monitor.go  mute.go  no_thumb.go  participant.go  pause.go  ping.go  play.go  playmode.go  position.go  privacy.go  queue.go  reload.go  (+19 more)
internal/state/: models.go
internal/utils/: admins.go  batbin.go  cache.go  cache_test.go  edit_or_reply.go  extract_chat.go  extract_url.go  extract_user.go  flood_control.go  format.go  get_duration.go  get_full_chat.go  get_group_call.go  get_peer_id.go  get_progress.go  get_video_dms.go  if_else.go  parser.go  strings.go  thumbnail.go
ntgcalls/: client.go  dh_config.go  future.go  media_description.go  ntgcalls.go  types.go  utils.go
scripts/: envgen.py  setup.sh
scripts/startup/: envgen.py  setup.sh
strings/: README.md  __init__.py  attrdict.py  command.yml  commands.yaml  commands.yml  helpers.py  readme.md
strings/cmds/: ar.yml  ckb.yml  en.yml  tr.yml
strings/helpers/: ckb.yml
strings/langs/: ar.yml  as.yml  az.yml  cheems.yml  ckb.yml  cn.yml  en.yml  en1.yml  gu.yml  hi  hi.yml  id.yml  ku.yml  si.yml  tr.yml
ubot/: calls.go  connect_call.go  context.go  convert_call_id.go  convert_group_call_id.go  get_input_group_call.go  get_p2p_configs.go  get_participants.go  handle_updates.go  join_presentation.go  mute.go  parse_chat_id.go  parse_rtc_servers.go  parse_video_sources.go  pause.go  play.go  playback.go  record.go  resume.go  set_call_status.go  stop.go  types.go  unmute.go  update_sources.go
yukkimusic/: __init__.py  __main__.py  logging.py  misc.py
(+314 files in other folders)
